# Go2_navigation_Sem2

./: .gitignore  .gitmodules
log/: latest_list
src/go2_bringup/: CMakeLists.txt  package.xml
src/go2_bringup/config/: go2_super_odom_1.rviz  go2_super_odom_2.rviz  go2_super_odom_3.rviz  go2_test2.rviz  livox_mid360_nav2.yaml  my_map.pgm  my_map.yaml  nav2_params.yaml  nav2_params_go2.yaml  robotics_lab_v1.pgm  robotics_lab_v1.yaml  slam_toolbox_params.yaml
src/go2_bringup/launch/: ego_planner_nav.launch.py  nav2_testing.launch.py  super_odom.launch.py
src/go2_nav2/: CMakeLists.txt
src/go2_nav2/src/: footprint_transform_publisher.cpp  odom_tf_broadcaster.cpp  tf_tree_publisher_node copy.cpp  tf_tree_publisher_node.cpp  transform_remapper.cpp
src/install/go2_bringup/share/go2_bringup/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
src/install/go2_nav2/lib/go2_nav2/: footprint_transform_publisher  odom_tf_broadcaster  tf_tree_publisher_node  transform_remapper
src/install/go2_nav2/share/go2_nav2/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
src/install/pointcloud_to_laserscan/include/pointcloud_to_laserscan/: laserscan_to_pointcloud_node.hpp  pointcloud_to_laserscan_node.hpp  visibility_control.h
src/install/pointcloud_to_laserscan/lib/pointcloud_to_laserscan/: dummy_pointcloud_publisher  laserscan_to_pointcloud_node  pointcloud_to_laserscan_node
src/install/pointcloud_to_laserscan/share/pointcloud_to_laserscan/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
src/log/: latest_build
(+29 files in other folders)
